--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
-Package    Version
----------- -------
-asgiref    3.4.1
-Django     3.2.6
-pip        21.2.3
-pytz       2021.1
-setuptools 57.0.0
-sqlparse   0.4.1
-wheel      0.36.2
+asgiref==3.4.1
+Django==3.2.6
+django-markdown-deux==1.0.5
+markdown2==2.4.0
+pytz==2021.1
+sqlparse==0.4.1
+asgiref==3.4.1
+Django==3.2.6
+django-markdown-deux==1.0.5
+markdown2==2.4.0
+pytz==2021.1
+sqlparse==0.4.1
