--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,10 @@
 asgiref==3.4.1
+cffi==1.14.6
+cryptography==3.4.7
 Django==3.2.6
 django-markdown-deux==1.0.5
 markdown2==2.4.0
-pytz==2021.1
-sqlparse==0.4.1
-asgiref==3.4.1
-Django==3.2.6
-django-markdown-deux==1.0.5
-markdown2==2.4.0
+pycparser==2.20
+PyMySQL==1.0.2
 pytz==2021.1
 sqlparse==0.4.1
